[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "seismic-pickax"
dynamic = ["version"]
authors = [
  { name="Philip Crotwell", email="crotwell@seis.sc.edu" },
]
description = "Seismic phase picker."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering"
]
dependencies = [
    "obspy>=1.4",
    "ipython>=8",
    "simplemseed",
]

[project.urls]
Homepage = "https://github.com/crotwell/pickax"
Documentation = "https://pickax.readthedocs.io"
Repository = "https://github.com/crotwell/pickax"
Issues = "https://github.com/crotwell/pickax/issues"

[project.scripts]
    "pickax" = "seismic-pickax.pickax_main:main"
    "usgspicks" = "seismic-pickax.usgspicks:main"
    "mergepicks" = "seismic-pickax.mergepicks:main"
    "dumppicks" = "seismic-pickax.dumppicks:main"
    "eqtranspicks" = "seismic-pickax.eqtransform:main"
    "hypoinverse" = "seismic-pickax.hypoinverse:main"
    "exportreal" = "seismic-pickax.exportreal:main"
    "exportvelest" = "seismic-pickax.exportvelest:main"
    "exportdistaz" = "seismic-pickax.exportdistaz:main"

[tool.pytest.ini_options]
    addopts = [
        "--import-mode=importlib",
        ]

[tool.hatch.version]
    path = "src/pickax/__init__.py"
[tool.hatch.build.targets.wheel]
    packages = ["src/pickax"]
